fixed alignment of project cards

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,3 +1,8 @@
 #projects-container {
     display: flex;
+    flex-wrap: wrap;
+}
+
+.card {
+    margin: 10px 25px;
 }
